[package]
name = "woo-http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.12.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
